page Web version d'Hanane

--- a/html/labogit.html
+++ b/html/labogit.html
@@ -1,1 +1,30 @@
-allo
+<!DOCTYPE html>
+<html>
+<head>
+<title>Logiciel de partage - GIT - Groupe 1</title>
+<style>
+.div_gr1{
+	border: 1px solid black;
+	width:500px;
+	height:500px;
+	float: left;
+	padding: 20px; 
+	margin: 20px;
+	}
+</style>
+</head>
+<body>
+
+<h1>Groupe 1</h1>
+<p>Mettez du contenu dans votre div</p>
+
+<div class="div_gr1" id="#gr1">1</div>
+<div class="div_gr1" id="#gr2">2</div>
+<div class="div_gr1" id="#gr3">3</div>
+<div class="div_gr1" id="#gr4">4</div>
+<div class="div_gr1" id="#gr5">5</div>
+
+
+
+</body>
+</html>
