--- a/html/labogit.html
+++ b/html/labogit.html
@@ -18,7 +18,7 @@
 <h1>Groupe 1</h1>
 <p>Mettez du contenu dans votre div</p>
 
-<div class="div_gr1" id="#gr1">1</div>
+<div class="div_gr1" id="#gr1"><img src="https://goo.gl/images/vjitiq" /> GIT par JFL</div>
 <div class="div_gr1" id="#gr2">2</div>
 <div class="div_gr1" id="#gr3">3</div>
 <div class="div_gr1" id="#gr4">4</div>
