--- a/html/labogit.html
+++ b/html/labogit.html
@@ -18,7 +18,7 @@
 <h1>Groupe 1</h1>
 <p>Mettez du contenu dans votre div</p>
 
-<div class="div_gr1" id="#gr1"><img src="https://goo.gl/images/vjitiq" /> GIT par JFL</div>
+<div class="div_gr1" id="#gr1"><h1>1</h1><img src="https://upload.wikimedia.org/wikipedia/fr/7/73/Logo-C%C3%A9gep_G%C3%A9rald-Godin.svg" /> <h1>GIT par JFL</h1></div>
 <div class="div_gr1" id="#gr2">2</div>
 <div class="div_gr1" id="#gr3">3</div>
 <div class="div_gr1" id="#gr4">4</div>
