--- a/html/labogit.html
+++ b/html/labogit.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<h1>Groupe 1</h1>
+<h1>Groupe X</h1>
 <p>Mettez du contenu dans votre div</p>
 
 <div class="div_gr1" id="#gr1" style="background-color: powderblue;color:white;"><h1>1</h1><img src="https://upload.wikimedia.org/wikipedia/fr/7/73/Logo-C%C3%A9gep_G%C3%A9rald-Godin.svg" /> <h1>GIT par JFL</h1></div>
